--- a/src/components/Card/style.module.css
+++ b/src/components/Card/style.module.css
@@ -2,7 +2,7 @@
   background-color: rgb(225, 225, 225);
   margin: 25px;
   max-width: 300px;
-  min-width: 250px;
+  /* min-width: 250px;  */
   min-height: 400px;
   border-radius: 10px;
   box-shadow: 4px 4px 4px #0000002e, -4px -4px 4px white;
@@ -33,4 +33,14 @@
   text-align: center;
   letter-spacing: 1.5px;
   color: #3d3d3d;
+}
+
+@media screen and (max-width: 600px) {
+  .movie_details {
+    width: 80%;
+  }
+  .poster {
+    width: 70%;
+    height: 300px;
+  }
 }
