--- a/src/containers/CardDisplay/style.module.css
+++ b/src/containers/CardDisplay/style.module.css
@@ -2,9 +2,24 @@
   display: flex;
   padding: 100px;
   flex-wrap: wrap;
+  justify-content: space-around;
 }
 .pagination_holder {
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+@media screen and (max-width: 1400px) {
+  .cards_holder {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .cards_holder {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
