--- a/src/components/Card/style.module.css
+++ b/src/components/Card/style.module.css
@@ -2,7 +2,7 @@
   background-color: rgb(225, 225, 225);
   margin: 25px;
   max-width: 300px;
-  /* min-width: 250px;  */
+  min-width: 250px;
   min-height: 400px;
   border-radius: 10px;
   box-shadow: 4px 4px 4px #0000002e, -4px -4px 4px white;
